[project]
name = "bwg-app"
version = "0.3.0"
description = "All of Bike Walk Greenville's resources in one place!"
readme = "README.md"
# Match the on-device runtime: serious_python (flet 0.80.x) embeds CPython 3.12.
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Bennett Meares", email = "data@bikewalkgreenville.org" }
]
dependencies = [
    "flet==0.80.5",
    "flet-geolocator==0.80.5",
    "flet-map==0.80.5",
    "flet-webview==0.80.5",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "flet-cli>=0.80.5",
    "flet-desktop-light>=0.80.5",
    "flet-web>=0.80.5",
]

[tool.flet]
org = "org.bikewalkgreenville"
product = "Bike Walk Greenville"
company = "Bike Walk Greenville"
copyright = "Copyright (C) 2026 by Bike Walk Greenville"
permissions = ["location"]

[tool.flet.app]
path = "src"
exclude = ["__pycache__"]
